[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/inventory.gd" type="Script" id=1]
[ext_resource path="res://assets/block.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45, 45 )

[node name="inventory" type="Node2D"]
script = ExtResource( 1 )

[node name="back" type="Sprite" parent="."]
self_modulate = Color( 0.164706, 0.164706, 0.164706, 0.427451 )
show_behind_parent = true
position = Vector2( 813.952, 237.941 )
scale = Vector2( 4.65163, 15.286 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="slots" type="Position2D" parent="."]

[node name="slot1" type="TouchScreenButton" parent="slots"]
position = Vector2( 797.324, 55 )
shape = SubResource( 1 )
shape_centered = false

[node name="box" type="Sprite" parent="slots/slot1"]
self_modulate = Color( 0.286275, 0.462745, 0.521569, 0.470588 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="icon" type="Sprite" parent="slots/slot1"]
z_index = 1

[node name="Label" type="Label" parent="slots/slot1"]
margin_left = -5.35199
margin_top = 21.8541
margin_right = 34.648
margin_bottom = 35.8541
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shade" type="Sprite" parent="slots/slot1"]
visible = false
self_modulate = Color( 0, 0, 0, 0.54902 )
position = Vector2( -40.9887, 0.692425 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
offset = Vector2( 16.3955, -0.27697 )

[node name="slot2" type="TouchScreenButton" parent="slots"]
position = Vector2( 797.324, 148 )
shape = SubResource( 1 )
shape_centered = false

[node name="box" type="Sprite" parent="slots/slot2"]
self_modulate = Color( 0.286275, 0.462745, 0.521569, 0.470588 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="icon" type="Sprite" parent="slots/slot2"]
z_index = 1

[node name="Label" type="Label" parent="slots/slot2"]
margin_left = -5.35199
margin_top = 21.0
margin_right = 34.648
margin_bottom = 35.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shade" type="Sprite" parent="slots/slot2"]
visible = false
self_modulate = Color( 0, 0, 0, 0.54902 )
position = Vector2( -40.5457, 1.19049 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
offset = Vector2( 16.2183, -0.476196 )

[node name="slot3" type="TouchScreenButton" parent="slots"]
position = Vector2( 797.324, 241 )
shape = SubResource( 1 )
shape_centered = false

[node name="box" type="Sprite" parent="slots/slot3"]
self_modulate = Color( 0.286275, 0.462745, 0.521569, 0.470588 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="icon" type="Sprite" parent="slots/slot3"]
z_index = 1

[node name="Label" type="Label" parent="slots/slot3"]
margin_left = -5.35199
margin_top = 21.0
margin_right = 34.648
margin_bottom = 35.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shade" type="Sprite" parent="slots/slot3"]
visible = false
self_modulate = Color( 0, 0, 0, 0.54902 )
position = Vector2( -41.0331, 1.02346 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
offset = Vector2( 16.4132, -0.409386 )

[node name="slot4" type="TouchScreenButton" parent="slots"]
position = Vector2( 797.324, 334 )
shape = SubResource( 1 )
shape_centered = false

[node name="box" type="Sprite" parent="slots/slot4"]
self_modulate = Color( 0.286275, 0.462745, 0.521569, 0.470588 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="icon" type="Sprite" parent="slots/slot4"]
z_index = 1

[node name="Label" type="Label" parent="slots/slot4"]
margin_left = -5.35199
margin_top = 21.0
margin_right = 34.648
margin_bottom = 35.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shade" type="Sprite" parent="slots/slot4"]
visible = false
self_modulate = Color( 0, 0, 0, 0.54902 )
position = Vector2( -40.841, 0.560837 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
offset = Vector2( 16.3364, -0.224335 )

[node name="slot5" type="TouchScreenButton" parent="slots"]
position = Vector2( 797.324, 427 )
shape = SubResource( 1 )
shape_centered = false

[node name="box" type="Sprite" parent="slots/slot5"]
self_modulate = Color( 0.286275, 0.462745, 0.521569, 0.470588 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="icon" type="Sprite" parent="slots/slot5"]
z_index = 1

[node name="Label" type="Label" parent="slots/slot5"]
margin_left = -5.35199
margin_top = 21.0
margin_right = 34.648
margin_bottom = 35.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shade" type="Sprite" parent="slots/slot5"]
visible = false
self_modulate = Color( 0, 0, 0, 0.54902 )
position = Vector2( -40.6783, 3.09856 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
offset = Vector2( 16.2713, -1.23943 )

[node name="timers" type="Position2D" parent="."]

[node name="Timer1" type="Timer" parent="timers"]
wait_time = 0.001
one_shot = true

[node name="Timer2" type="Timer" parent="timers"]
wait_time = 0.001
one_shot = true

[node name="Timer3" type="Timer" parent="timers"]
wait_time = 0.001
one_shot = true

[node name="Timer4" type="Timer" parent="timers"]
wait_time = 0.001
one_shot = true

[node name="Timer5" type="Timer" parent="timers"]
wait_time = 0.001
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="slots/slot1" to="." method="_on_slot1_pressed"]
[connection signal="pressed" from="slots/slot2" to="." method="_on_slot2_pressed"]
[connection signal="pressed" from="slots/slot3" to="." method="_on_slot3_pressed"]
[connection signal="pressed" from="slots/slot4" to="." method="_on_slot4_pressed"]
[connection signal="pressed" from="slots/slot5" to="." method="_on_slot5_pressed"]
